拖拽上传文件，升级至 Java 21，添加 readme